style changes to see what new layout will be

--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,15 @@
   <div class="top-bar-title">
     <h5>Servio's Portfolio</h5>
   </div>
-  <div>
+  <div id="responsive-menu">
     <div class="top-bar-left">
-       <ul class="menu">
+      <ul class="menu">
         <li><a ui-sref="home">Home</a></li>
         <li><a ui-sref="about">About</a></li>
         <li><a ui-sref="projects">Projects</a></li>
       </ul>
     </div><!-- End top-bar-left -->
-    <div class="top-bar-right">
+    <div id="links" align="right">
       <ul class="dropdown menu" data-dropdown-menu>
         <li>
           <a href="#">Links</a>
@@ -34,9 +34,9 @@
           </ul>
         </li>
       </ul>
-    </div><!-- End top-bar-right -->
-  </div>
-</div>
+    </div><!-- End links Div -->
+  </div><!-- End Responsive Menu -->
+</div><!-- End top-bar -->
 
 <div ui-view></div>
 
