--- a/public/index.html
+++ b/public/index.html
@@ -1,51 +1,79 @@
 <!DOCTYPE html>
 <html ng-app="portfolio">
 <head>
-  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Servio's Portfolio</title>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.0/foundation.min.css">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
-  <base href="/" />
+  <link rel="stylesheet" type="text/css" href="./css/about.css">
+  <link rel="stylesheet" type="text/css" href="./css/projects.css">
+
+  <!-- <base href="/" /> -->
 </head>
 <body>
 
-<div class="top-bar">
+<!-- <div class="top-bar">
   <div class="top-bar-title">
-    <h5>Servio's Portfolio</h5>
+    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+      <button class="menu-icon dark" type="button" data-toggle></button>
+    </span>
+    <strong>Servio's Portfolio</strong>
   </div>
   <div id="responsive-menu">
     <div class="top-bar-left">
-      <ul class="menu">
+      <ul class="vertical menu">
         <li><a ui-sref="home">Home</a></li>
         <li><a ui-sref="about">About</a></li>
         <li><a ui-sref="projects">Projects</a></li>
-      </ul>
-    </div><!-- End top-bar-left -->
-    <div id="links" align="right">
-      <ul class="dropdown menu" data-dropdown-menu>
-        <li>
-          <a href="#">Links</a>
-          <ul class="menu verticle">
-            <li><a href="https://github.com/Serviox19" target="_blank">Github</a></li><hr>
-            <li><a href="https://www.linkedin.com/in/servio-mora-b93972108" target="_blank">LinkedIn</a></li><hr>
-            <li><a href="" target="_blank">Twitter</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- End links Div -->
-  </div><!-- End Responsive Menu -->
-</div><!-- End top-bar -->
+    </ul>
+    </div>
+  </div>
+</div> -->
 
-<div ui-view></div>
+<div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
+  <button class="menu-icon" type="button" data-toggle></button>
+  <div class="title-bar-title">Servio's Portfolio</div>
+</div>
 
+<div class="top-bar" id="nav-menu">
+  <div class="top-bar-left">
+    <ul class="dropdown menu" data-dropdown-menu>
+      <li><a ui-sref="home">Home</a></li>
+      <li><a ui-sref="about">About</a></li>
+      <li><a ui-sref="projects">Projects</a></li>
+    </ul>
+  </div>
+</div>
+
+
+<div class="row" id="view">
+  <div class="small-12 columns">
+    <div ui-view></div>
+  </div>
+</div>
+
+
+<!-- <div class="row">
+  <div class="small-12 columns">
+    <div class="footer">
+      <h6>Links(will change location)</h6>
+      <ul>
+        <li><a href="https://github.com/Serviox19" target="_blank">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/servio-mora-b93972108" target="_blank">LinkedIn</a></li>
+        <li><a href="" target="_blank">Twitter</a></li>
+      </ul>
+    </div>
+  </div>
+</div> -->
 
 <!-- Javascripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/foundation/6.2.0/foundation.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script type="text/javascript" src="/js/app.js"></script>
-<script type="text/javascript" src="/js/controllers/homeCtrl.js"></script>
+<script type="text/javascript" src="/js/homeCtrl.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
 </body>
 </html>
