--- a/public/index.html
+++ b/public/index.html
@@ -9,32 +9,13 @@
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link rel="stylesheet" type="text/css" href="./css/about.css">
   <link rel="stylesheet" type="text/css" href="./css/projects.css">
-
   <!-- <base href="/" /> -->
 </head>
 <body>
 
-<!-- <div class="top-bar">
-  <div class="top-bar-title">
-    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-      <button class="menu-icon dark" type="button" data-toggle></button>
-    </span>
-    <strong>Servio's Portfolio</strong>
-  </div>
-  <div id="responsive-menu">
-    <div class="top-bar-left">
-      <ul class="vertical menu">
-        <li><a ui-sref="home">Home</a></li>
-        <li><a ui-sref="about">About</a></li>
-        <li><a ui-sref="projects">Projects</a></li>
-    </ul>
-    </div>
-  </div>
-</div> -->
-
 <div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
   <button class="menu-icon" type="button" data-toggle></button>
-  <div class="title-bar-title">Servio's Portfolio</div>
+  <div class="title-bar-title"><a ui-sref="home">Servio's Portfolio</a></div>
 </div>
 
 <div class="top-bar" id="nav-menu">
