sticking to this layout for now

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
+<div class="title-bar" data-responsive-toggle="nav-menu">
   <button class="menu-icon" type="button" data-toggle></button>
   <div class="title-bar-title">Servio's Portfolio</div>
 </div>
@@ -22,8 +22,8 @@
 <div class="top-bar" id="nav-menu">
   <div class="top-bar-left">
     <ul class="dropdown menu" data-dropdown-menu>
-      <li><a ui-sref="home">Home</a></li>
-      <li><a ui-sref="about">About</a></li>
+      <li><a ui-sref="home">Home</a></li><hr>
+      <li><a ui-sref="about">About</a></li><hr>
       <li><a ui-sref="projects">Projects</a></li>
     </ul>
   </div>
