--- a/public/index.html
+++ b/public/index.html
@@ -12,28 +12,31 @@
 </head>
 <body>
 
-<div class="container">
-  <nav class="navbar">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
     <div class="navbar-header">
-      <h3>Welcome!</h3>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" ui-sref="home">Welcome!</a>
     </div>
-    <ul class="nav navbar-nav pull-right">
-      <li class="navLink">
-        <a class="" ui-sref="home">Home</a>
-      </li>
-      <li class="navLink">
-        <a class="" ui-sref="skills">Skills</a>
-      </li>
-      <li class="navLink">
-        <a class="" ui-sref="projects">Projects</a>
-      </li>
-    </ul>
-  </nav>
-</div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a ui-sref="home">Home</a></li>
+        <li><a ui-sref="skills">Skills</a></li>
+        <li><a ui-sref="projects">Projects</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
-<div class="container">
+<div class="container-fluid" id="main-content">
   <div ui-view></div>
 </div>
+
 
 
 <!--  -->
