almost fnished with home page, lokks good.

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       </button>
       <a class="navbar-brand" ui-sref="home">Welcome!</a>
     </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse-navbar collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a ui-sref="home">Home</a></li>
         <li><a ui-sref="skills">Skills</a></li>
