added content to skills page, needs styling, and pictures

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,11 @@
       </button>
       <a class="navbar-brand" ui-sref="home">Welcome!</a>
     </div>
-    <div class="collapse-navbar collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a ui-sref="home">Home</a></li>
-        <li><a ui-sref="skills">Skills</a></li>
-        <li><a ui-sref="projects">Projects</a></li>
+        <li><a class="nav-links" ui-sref="home">Home</a></li>
+        <li><a class="nav-links" ui-sref="skills">Skills</a></li>
+        <li><a class="nav-links" ui-sref="projects">Projects</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
