--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container-fluid" id="main-content">
+<div id="main-content">
   <div ui-view></div>
 </div>
 
