--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="portfolio">
 <head>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Servio's Portfolio</title>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
