--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html ng-app="portfolio">
 <head>
-  <base href="/">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Servio's Portfolio</title>
-  <script type="text/javascript" src="bower_components/angular/angular.js"></script>
-  <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="./css/home.css">
-  <link rel="stylesheet" type="text/css" href="./css/skills.css">
-  <link rel="stylesheet" type="text/css" href="./css/projects.css">
 </head>
 <body>
 
@@ -27,7 +20,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="nav-links" ui-sref="home">Home</a></li>
+        <li><a class="nav-links" ui-sref="home">About Me</a></li>
         <li><a class="nav-links" ui-sref="skills">Skills</a></li>
         <li><a class="nav-links" ui-sref="projects">Projects</a></li>
       </ul>
@@ -35,21 +28,9 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div id="main-content">
-  <div ui-view></div>
-</div>
 
-
-
-<!--  -->
 
 <!-- Javascripts -->
-<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
-<script type="text/javascript" src="/js/app.js"></script>
-<!-- <script type="text/javascript" src="/js/homeCtrl.js"></script> -->
-<script type="text/javascript" src="/js/index.js"></script>
+<!-- <script type="text/javascript" src="/js/index.js"></script> -->
 </body>
 </html>
