changed navbar, and finishing about me section

--- a/public/index.html
+++ b/public/index.html
@@ -11,34 +11,33 @@
 <div class="header">
     <h1>Welcome!</h1>
 </div>
-<div class="row">
+<div class="navbar">
   <div class="container">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a class="nav-links" href="#">About Me</a></li>
-            <li><a class="nav-links" href="#">Skills</a></li>
-            <li><a class="nav-links" href="#">Projects</a></li>
-          </ul>
-        </div>
-      </div>
+    <h1 id="logo">Servio Mora</h1>
+    <nav>
+        <a href="">About</a>
+        <a href="">Skills</a>
+        <a href="">Projects</a>
     </nav>
   </div>
-  <div class="col-md-12">
-    <div class="container">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+</div>
+<div class="about">
+  <div class="container">
+    <div class="row" id="aboutRow">
+      <div class="col-md-4">
+        <img src="https://dl.dropboxusercontent.com/s/e3pw0dq21rcllxi/head-shot.jpg?dl=0" alt="" class="img-rounded">
+      </div>
+      <div class="col-md-8 aboutMe">
+        <h3>Web Developer | Sports Fanatic | Aspiring Entreprenuer</h3>
+        <p>Hello, My Name is Servio Mora. I am a passionate Web Developer who's main goal is to be part of a great team and learn new skills and technologies everyday. Along with improving my development skills, I want to be able to put my ideas in the hands of thousands or even millions of people. Constant innovation is what makes the world a better place, and I want to be part of the few that get to achieve those milestones.</p>
+        <p>I am located in the Greater NYC area, I have lots of experience in HTML, CSS, Javascript. Along with JavaScript, I love using the many frameworks JavaScript has such as Angular Js, Node Js, Meteor Js, React Js. Everyday I am constantly improving my skills and working to be the best Developer I can be. I am also familiar with many build tools and database technologies. I am not only proficient in Front-End Development, but Back-End as well.</p>
+        <p>When I am not coding I love to excersise, watch movies, play video games, hang out with friends, and explore new adventures life has to offer. If you've read this far, I really appreciate it. Please feel free to view the rest of my page and contact me if you like what you see.</p>
+        <div class="resume"><button type="button" name="button">Download My Resume</button></div>
+      </div>
     </div>
   </div>
 </div>
+
 
 
 
