made navbar static on scroll

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Servio's Portfolio</title>
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
@@ -32,7 +33,16 @@
         <p>Hello, My Name is Servio Mora. I am a passionate Web Developer who's main goal is to be part of a great team and learn new skills and technologies everyday. Along with improving my development skills, I want to be able to put my ideas in the hands of thousands or even millions of people. Constant innovation is what makes the world a better place, and I want to be part of the few that get to achieve those milestones.</p>
         <p>I am located in the Greater NYC area, I have lots of experience in HTML, CSS, Javascript. Along with JavaScript, I love using the many frameworks JavaScript has such as Angular Js, Node Js, Meteor Js, React Js. Everyday I am constantly improving my skills and working to be the best Developer I can be. I am also familiar with many build tools and database technologies. I am not only proficient in Front-End Development, but Back-End as well.</p>
         <p>When I am not coding I love to excersise, watch movies, play video games, hang out with friends, and explore new adventures life has to offer. If you've read this far, I really appreciate it. Please feel free to view the rest of my page and contact me if you like what you see.</p>
-        <div class="resume"><button type="button" name="button">Download My Resume</button></div>
+        <div class="resume"><a href="https://dl.dropboxusercontent.com/s/hlpwusdog7m675i/Servio%20Mora%20Developer.docx?dl=0"><button type="button" class="btn btn-success">Download Resume&nbsp;&nbsp;<i class="fa fa-download fa-lg" aria-hidden="true"></i></button></a></div>
+      </div>
+    </div>
+  </div>
+</div><!-- End About-->
+<div class="skills">
+  <div class="container">
+    <div class="row">
+      <div col-md-12>
+        <h1>yooo</h1>
       </div>
     </div>
   </div>
@@ -45,5 +55,6 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
+<script src="/js/scroll.js"></script>
 </body>
 </html>
