--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
           <img src="https://dl.dropboxusercontent.com/s/e3pw0dq21rcllxi/head-shot.jpg?dl=0" alt="" class="img-rounded">
         </div>
         <div class="col-md-8 aboutMe">
-          <h3>Web Developer | Sports Fanatic | Aspiring Entreprenuer</h3>
+          <h3>Web Developer | Sports Fanatic | Aspiring Entrepreneur</h3>
           <p>Hello, My Name is Servio Mora. I am a passionate Web Developer who's main goal is to be part of a great team and learn new skills and technologies everyday. Along with improving my development skills, I want to be able to put my ideas in the hands of thousands or even millions of people. Constant innovation is what makes the world a better place, and I want to be part of the few that get to achieve those milestones.</p>
           <p>I am located in the Greater NYC area, I have lots of experience in HTML, CSS, Javascript. Along with JavaScript, I love using the many frameworks JavaScript has such as Angular Js, Node Js, Meteor Js, React Js. Everyday I am constantly improving my skills and working to be the best Developer I can be. I am also familiar with many build tools and database technologies. I am not only proficient in Front-End Development, but Back-End as well.</p>
-          <p>When I am not coding I love to excersise, watch movies, play video games, hang out with friends, and explore new adventures life has to offer. If you've read this far, I really appreciate it. Please feel free to view the rest of my page and contact me if you like what you see.</p>
+          <p>When I am not coding I love to excersise, watch movies, read books, listen to podcasts, hang out with friends, and explore new adventures life has to offer. If you've read this far, I really appreciate it. Please feel free to view the rest of my portfolio page and contact me if you like what you see.</p>
           <div class="resume"><a href="https://dl.dropboxusercontent.com/s/hlpwusdog7m675i/Servio%20Mora%20Developer.docx?dl=0"><button type="button" class="btn btn-success">Download Resume&nbsp;&nbsp;<i class="fa fa-download fa-lg" aria-hidden="true"></i></button></a></div>
         </div>
       </div>
@@ -164,6 +164,6 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
-<script src="/js/scroll.js"></script>
+<script type="text/javascript" src="/js/scroll.js"></script>
 </body>
 </html>
