added navbar and removed hashtags from url on click

--- a/public/index.html
+++ b/public/index.html
@@ -201,6 +201,15 @@
     </div>
   </div><!-- End Projects Container -->
 </div><!-- End Projects Div -->
+<div class="footer">
+  <div class="container">
+    <span class="links">
+      <a href="https://github.com/Serviox19" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+      <a href="https://www.linkedin.com/in/servio-mora-b93972108" class="linkedin" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+      <a href="https://twitter.com/Sciypher" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    </span>
+  </div>
+</div>
 
 
 
