--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="bower_components/devicon/icons/devicon.min.css">
   <link rel="stylesheet" type="text/css" href="bower_components/devicon/icons/devicon-colors.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/animate.css/animate.min.css">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 <div class="header">
-    <h1>Welcome!</h1>
+    <h1 class="animated rubberBand">Welcome!</h1>
 </div>
 <div class="navbar">
   <div class="container">
@@ -217,6 +218,7 @@
 <!-- Javascripts -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/js/animate.js"></script>
 <script type="text/javascript" src="/js/scroll.js"></script>
 </body>
 </html>
