new animation features

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
 <div class="header">
-    <h1 class="animated rubberBand">Welcome!</h1>
+    <h1 id="welcome">Welcome!</h1>
 </div>
 <div class="navbar">
   <div class="container">
-    <h1 id="logo">Servio Mora</h1>
+    <h1>Servio Mora</h1>
     <nav>
         <a href="#about">About Me</a>
         <a href="#skills">Skills</a>
@@ -217,8 +217,7 @@
 
 <!-- Javascripts -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/js/animate.js"></script>
+<script type="text/javascript" src="/js/animate.js"></script>
 <script type="text/javascript" src="/js/scroll.js"></script>
 </body>
 </html>
