--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
       <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
         <div class="thumbnail">
           <h3>CIMS Med.</h3>
-          <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/vr5rywmppv7ht13/cims.png?dl=0">
+          <img class="img-responsive project-pic" src="./images/cims.png">
           <div class="caption">
             <p>This application allows users to search for Doctors based on location, specialty, etc. This is a Full Stack application using Javascript, and Javascript Frameworks to power the Front-End and Back-End.</p>
             <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://cims-health.herokuapp.com">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Mark-A-A/CIMS">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
@@ -175,10 +175,10 @@
           <h3>Mora Sports</h3>
           <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6">
-              <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/9nwub9e4f5owdsb/PSX_20160621_004807.jpg?dl=0">
+              <img class="img-responsive project-pic" src="./images/sports-app.jpg">
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6">
-              <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/ulkow3kh1o8itd8/PSX_20160621_004935.jpg?dl=0">
+              <img class="img-responsive project-pic" src="./images/sports-app-menu.jpg">
             </div>
           </div>
           <div class="caption sports-caption">
@@ -192,7 +192,7 @@
       <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
         <div class="thumbnail">
           <h3>Rock, Paper, Scissors</h3>
-          <img class="img-responsive project-pic" src="https://dl.dropboxusercontent.com/s/6iqn4jfvvzylhed/Screenshot%202016-04-27%2012.51.38.png?dl=0">
+          <img class="img-responsive project-pic" src="./images/rps.png">
           <div class="caption">
             <p>This is one of my early projects, a Rock, Papers, Scissors game using JavaScript, jQuery, and CSS to provide game logic and styling.</p>
             <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://servio-rps.herokuapp.com/">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Rock-Papers-Scissors">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
