changed picture for rps game, and changed text

--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
           <h3>Rock, Paper, Scissors</h3>
           <img class="img-responsive project-pic" src="./images/rps.png">
           <div class="caption">
-            <p>This is one of my early projects, a Rock, Papers, Scissors game using JavaScript, jQuery, and CSS to provide game logic and styling.</p>
+            <p>This is one of my early projects, a Rock, Papers, Scissors game using jQuery for game logic, and CSS/Sass to provide styling.</p>
             <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://servio-rps.herokuapp.com/">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/Rock-Papers-Scissors">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
           </div>
         </div>
