added new project

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,18 @@
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
         <div class="thumbnail">
+          <h3>PSD Mock Site</h3>
+          <img class="img-responsive project-pic" src="./images/psd-site.png">
+          <div class="caption">
+            <p>Took a PSD file that was given to me and mocked up this web-page. This was more for practice, but with a few touch ups, this can easily be used for any company.</p>
+            <p class="project-links"><a target="_blank" class="btn btn-default pull-right" href="https://psd-mock.herokuapp.com/">Demo &nbsp;&nbsp;<i class="fa fa-globe fa-2x" aria-hidden="true"></i></a><a target="_blank" class="btn btn-default pull-right" href="https://github.com/Serviox19/landing-page-mock">View Code &nbsp;&nbsp;<i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
+        <div class="thumbnail">
           <h3>CIMS Med.</h3>
           <img class="img-responsive project-pic" src="./images/cims.png">
           <div class="caption">
